--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.5",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "firebase": "^10.13.2",
     "jose": "^5.9.3",
     "next": "14.2.11",
