--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
+    "google-auth-library": "^9.15.0",
+    "google-spreadsheet": "^4.1.4",
+    "googleapis": "^144.0.0",
     "jose": "^5.9.3",
     "next": "14.2.11",
     "react": "^18",
