--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.1",
     "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.4",
     "googleapis": "^144.0.0",
